--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gatsby": "^1.9.45",
     "gatsby-link": "^1.6.17",
     "gatsby-plugin-react-helmet": "^1.0.5",
-    "gatsby-plugin-styled-components": "^1.0.5"
+    "gatsby-plugin-styled-components": "^1.0.5",
+    "react-typekit": "^1.1.0"
   },
   "keywords": [
     "gatsby"
