--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+# Project dependencies
+.cache
 node_modules
-.cache/
-public/
-.DS_Store
 yarn-error.log
-yarn.lock
+
+# Build directory
+/public
+.DS_Store
