Revert both Netlify CMS-related packages to proper Gatsby v1.x versions; /admin/ now works

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
-    "gatsby-plugin-netlify-cms": "^3.0.0-rc.1",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "netlify-cms": "^2.0.11",
+    "netlify-cms": "^1.9.3",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
