--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-remark": "^1.7.44",
     "netlify-cms": "^1.9.3",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
