--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template
     fields: # The fields for each document, usually in front matter
-      - label: "Path"
+      - label: "Path (include leading '/')"
         name: "path"
         widget: "string"
       - label: "Layout"
@@ -64,7 +64,7 @@ collections:
             widget: "string"
         required: false
       - label: "Total Time"
-        name: "totalTime"
+        name: "time"
         widget: "object"
         fields:
           - label: "Amount"
