--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
+    "gotrue-js": "^0.9.22",
     "netlify-cms": "^1.9.3",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
