--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template
     fields: # The fields for each document, usually in front matter
-      - label: "Path (include leading '/')"
+      - label: "Path (include leading '/kitchen/recipe/')"
         name: "path"
         widget: "string"
       - label: "Layout"
