--- a/package.json
+++ b/package.json
@@ -4,29 +4,31 @@
   "version": "1.0.0",
   "author": "Teagan Atwater <desk@teaganatwater.com>",
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.55",
+    "@babel/runtime": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-brands-svg-icons": "^5.1.0",
     "@fortawesome/pro-light-svg-icons": "^5.1.0",
     "@fortawesome/pro-regular-svg-icons": "^5.1.0",
     "@fortawesome/pro-solid-svg-icons": "^5.1.0",
-    "@fortawesome/react-fontawesome": "0.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@wapps/gatsby-plugin-fonts": "^1.0.2",
-    "babel-plugin-styled-components": "^1.5.1",
-    "gatsby": "^1.9.277",
-    "gatsby-link": "^1.6.46",
-    "gatsby-plugin-netlify-cms": "^2.0.1",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
+    "babel-plugin-styled-components": "^1.7.1",
+    "gatsby": "^2.0.0",
+    "gatsby-link": "^2.0.1",
+    "gatsby-plugin-netlify-cms": "^3.0.0",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.1",
+    "gatsby-transformer-remark": "^2.1.1",
     "gotrue-js": "^0.9.22",
-    "netlify-cms": "^1.9.3",
+    "netlify-cms": "^2.1.2",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.4.8"
   },
   "keywords": [
     "gatsby"
