--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
-    "styled-components": "^3.4.8"
+    "styled-components": "^3.4.8",
+    "vh-check": "^1.1.3"
   },
   "keywords": [
     "gatsby"
